--- a/statamic/_config/fieldsets/property_rent.yaml
+++ b/statamic/_config/fieldsets/property_rent.yaml
@@ -1,4 +1,18 @@
 fields:
+  site_root:
+    type: select
+    options:
+      - http://lesliegarfield.com/
+      - http://localhost/~philippe/lesliegarfield/statamic/
+  folder_location:
+    hide: true
+    default: properties/rental_properties/
+  price:
+    type: text
+    required: true
+    display: Property Price
+    instructions:
+      above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   categories:
     display: Categories
     required: false
@@ -7,9 +21,11 @@ fields:
   featured:
     display: Featured Property?
     type: checkbox
+    default: 0
   openhouse:
     display: Open House?
     type: checkbox
+    default: 0
   content:
     type: redactor
     hide: true
@@ -37,11 +53,6 @@ fields:
       - Midtown West
       - Upper East Side
       - Upper West Side
-  price:
-  	type: text
-  	display: Property Price
-  	instructions:
-  		above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   property_type: 
   	display: Type of Property
   	type: radio
