--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ statamic/!_cache/index.html
 statamic/_logs/*
 statamic/!_logs/index.html
 statamic/assets/*
-# statamic/_content/*
+statamic/_content/*
 statamic/_config/users/*
 .htaccess
 
