--- a/statamic/_config/fieldsets/page.yaml
+++ b/statamic/_config/fieldsets/page.yaml
@@ -1,18 +1,40 @@
-title: Standard Page
-
 fields:
-  _template:
-    display: Template
-    type: templates
 
-  upload:
-    type: file
-    destination: assets/img/
-    allowed: ['jpg', 'png']
+  my_replicator_field:
+    type: replicator
+    instructions: |
+      Replicate a new set for each piece of content you need.
 
-  content:
-    display: Page Content
-    required: false
-    default:
-    type: markitup
+    sets:
 
+      content_set:
+        display: Content
+        instructions: A basic block of text
+        fields:
+          text:
+            display: Text
+            type: markitup
+
+      quote_set:
+        display: Quote
+        instructions: A lovely pullquote
+        fields:
+          quote:
+            type: textarea
+            height: 40
+            instructions: What was said?
+          cite:
+            type: text
+            instructions: Who said it?
+
+      image_set:
+        display: Image
+        instructions: Showcase your adventures in a gallery
+        fields:
+          photo:
+            type: file
+            allowed: [png, jpg, gif]
+            destination: assets/img/
+          caption:
+            type: text
+            instructions: Describe the photo
