--- a/statamic/_config/environments/dev.yaml
+++ b/statamic/_config/environments/dev.yaml
@@ -7,4 +7,4 @@
 # Just an example use case
 # enable_analytics: no
 _site_root: /~philippe/lesliegarfield/statamic/
-_site_url: ~philippe/lesliegarfield/statamic/
+_site_url: 
