slick for property pages and social icons

--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -58,6 +58,7 @@ fields:
   property_location:
     type: suggest
     create: true
+    max_items: 1
     options:
       - East Village
       - Greenwich Village
