--- a/statamic/_config/fieldsets/landing.yaml
+++ b/statamic/_config/fieldsets/landing.yaml
@@ -24,3 +24,24 @@ fields:
     default:
     type: redactor
 
+  insights:
+    type: grid
+    display: News & Insights Liks
+    starting_rows: 3
+    max_rows: 3
+    fields:
+      headline:
+        type: text
+        display: headline
+        width: 20%
+      info:
+        type: textarea
+        display: Sub headline
+        width: 40%
+      link_title:
+        type: text
+        display: Link Verbage
+        width: 20%
+      link:
+        type: text
+        display: URL
