--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -3,17 +3,13 @@
 fields:
   slug: 
     hide: false 
-  folder_location:
-    default: properties/sale_properties/
-    hide: true
   site_root:
     type: select
     options:
       - http://lesliegarfield.com/
       - http://localhost/~philippe/lesliegarfield/statamic/
-  slugg:
-    type: text
-    display: Copy Slug
+  url:
+    type: page_url
   agents:
     display: Agents
     type: suggest
@@ -74,10 +70,10 @@ fields:
     display: Property Type
     type: suggest
     create: true
-    content:
-      folder: properties
-      label: title
-      value: url
+    max_items: 1
+    taxonomy:
+      type: property_type
+      folder: properties/*
   preview_image:
     display: Preview Image
     type: file
@@ -87,13 +83,11 @@ fields:
     type: redactor
     hide: true
   photo_carousel:
-    type: grid
+    type: file
     display: Photo Carousel
-    fields:
-      image:
-        type: file
-        destination: assets/img/properties/sale
-        allowed: [png, gif, jpg, jpeg]
+    instructions: Click Upload a File or Drag and Drop on the Upload box. You can upload multiple files at once.
+    allowed: [png, gif, jpg, jpeg]
+    destination: assets/img/properties/sale
   specs:
     display: Download
     type: file
