--- a/statamic/_config/settings.yaml
+++ b/statamic/_config/settings.yaml
@@ -50,6 +50,7 @@ _taxonomy:
   - tags
   - key_features
   - property_location
+  - property_type
 
 # Turns your slugs into pretty urls (spaces become "-" instead of %20)
 _taxonomy_slugify: false
