added datestamp, removed sqft from sort bar, added sort by date

--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -8,6 +8,9 @@ fields:
       - http://localhost/~philippe/lesliegarfield/statamic/
   url:
     type: page_url
+  datestamp:
+    type: date
+    hide: true
   price:
     type: text
     required: true
