--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -16,9 +16,12 @@ fields:
   price:
     type: text
     required: true
-    display: Lease Terms / Must be Monthly Rate
+    display: Lease Price / Must be Monthly Rate
     instructions:
       above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
+  terms:
+    type: text
+    display: Lease Terms
   property_location:
     type: suggest
     create: true
