--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -71,6 +71,9 @@ fields:
     taxonomy:
       type: property_type
       folder: properties/*
+  build_date:
+    type: text
+    display: Build Date
   plot:
     type: text
     display: Plot
@@ -91,6 +94,9 @@ fields:
     type: text
   bathrooms:
     display: Bathrooms
+    type: text
+  powder:
+    display: Powder Rooms
     type: text
   taxes:
     display: Taxes
