improved openhouse style

--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -54,9 +54,10 @@ fields:
   featured:
     display: Featured Property?
     type: checkbox
-  openhouse:
-    display: Open House?
-    type: checkbox
+  openhouse_details:
+    type: text
+    display: Open House Details
+    instructions: "Enter details only such as "Tuesday, 9/6 10:00am - 1:00PM""
   streeteasy:
     display: Street Easy?
     type: checkbox
