--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -58,7 +58,7 @@ fields:
   openhouse_details:
     type: text
     display: Open House Details
-    instructions: "Enter details only such as "Tuesday, September 3rd between 10:00am - 1:00PM""
+    instructions: "Enter details only such as "Tuesday, 9/6 10:00am - 1:00PM""
   agents:
     display: Agents
     type: suggest
