--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -62,6 +62,17 @@ fields:
     type: text
     display: Open House Details
     instructions: "Enter details only such as "Tuesday, 9/6 10:00am - 1:00PM""
+  sold:
+    display: Sold?
+    type: checkbox
+  sold_price:
+    type: text
+    display: Sale Price
+    instructions:
+      above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
+  sold_date:
+    type: date
+    display: Sell Date
   agents:
     display: Agents
     type: suggest
@@ -84,6 +95,9 @@ fields:
   plot:
     type: text
     display: Plot
+  building_size:
+    type: text
+    display: Building Size
   stories:
     type: text
     display: Stories
@@ -108,6 +122,9 @@ fields:
   taxes:
     display: Taxes
     type: text
+  income:
+    type: checkbox
+    display: Income
   expenses:
     type: checkbox
     display: Expenses
