--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -67,12 +67,12 @@ fields:
     type: text
     display: Open House Details
     instructions: "Enter details only such as "Tuesday, 9/6 10:00am - 1:00PM""
-  sold:
-    display: Sold?
+  leased:
+    display: Leased?
     type: checkbox
-  sold_price:
+  lease_price:
     type: text
-    display: Sale Price
+    display: Lease Price
     instructions:
       above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   agents:
