updated fieldsets to use taxonomy

--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -29,14 +29,9 @@ fields:
     type: suggest
     create: true
     max_items: 1
-    options:
-      - East Village
-      - Greenwich Village
-      - Harlem
-      - Midtown East
-      - Midtown West
-      - Upper East Side
-      - Upper West Side
+    taxonomy:
+      type: property_location
+      folder: properties/*
   lat_long:
     display: Property Coordinates
     type: grid
