--- a/statamic/_config/fieldsets/property_leased.yaml
+++ b/statamic/_config/fieldsets/property_leased.yaml
@@ -6,14 +6,9 @@ fields:
     type: suggest
     create: true
     max_items: 1
-    options:
-      - East Village
-      - Greenwich Village
-      - Harlem
-      - Midtown East
-      - Midtown West
-      - Upper East Side
-      - Upper West Side
+    taxonomy:
+      type: property_location
+      folder: properties/*
   leased:
     display: Leased?
     type: checkbox
