--- a/statamic/_config/fieldsets/neighborhood_individual.yaml
+++ b/statamic/_config/fieldsets/neighborhood_individual.yaml
@@ -29,40 +29,25 @@ fields:
         width: 50%
   left:
     type: text
-    display: Number for left column (include $ or % symbol)
-  left_description:
-    type: text
-    display: Descriptive text below number (will be transformed to uppercase)
-    default: rise in property prices in last five years
+    display: 'Number for left column. Do not include percentage symbol. Text below will read: RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS'
   right_top:
     type: text
     display: Average Price Per Square Foot (Number only, no symbols or commas)
-  price_tag:
+  right_bottom:
     type: grid
-    display: Price Tag Graphic (Use this OR Generic Number Sold Info, defaults to Price tag if both filled out)
     max_rows: 1
+    display: Fill only ONE out, if you fill both out we default to Price Tag graphic
     fields:
-      top:
+      price_tag:
         type: text
-        display: Price Tag Text (full text minus the * symbol, such as 13.03M)
+        display: 'Price tag number. Format: "13.03M" Text below reads: AVERAGE SALE PRICE'
         width: 50%
-      bottom:
+      simple_graphic:
         type: text
-        display: Bottom Text
-        default: AVERAGE SALE PRICE
-  simple_graphic:
-    type: grid
-    display: Simple Number and Description Text
-    max_rows: 1
-    fields:
-      top:
-        type: text
-        display: Top Text, likely just a number
-        width: 50%
-      bottom:
-        type: text
-        display: Bottom text, no more than one sentence
-        default: TOWNHOUSES SOLD IN THE LAST YEAR
+        display: 'Simple number with no graphic. Text below reads: TOWNHOUSES SOLD IN THE LAST YEAR'
+
   description:
     type: redactor
     display: Description
+  content:
+    hide: true
