--- a/statamic/_config/fieldsets/neighborhood_individual.yaml
+++ b/statamic/_config/fieldsets/neighborhood_individual.yaml
@@ -32,19 +32,19 @@ fields:
     display: 'Number for left column. Do not include percentage symbol. Text below will read: RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS'
   right_top:
     type: text
-    display: Average Price Per Square Foot (Number only, no symbols or commas)
+    display: Average Price Per Sq/Ft (Number only, no symbols or commas)
   right_bottom:
     type: grid
     max_rows: 1
-    display: Fill only ONE out, if you fill both out we default to Price Tag graphic
+    display: Fill out ONLY ONE of the following
     fields:
       price_tag:
         type: text
-        display: 'Price tag number. Format: "13.03M" Text below reads: AVERAGE SALE PRICE'
+        display: 'Average Sales Price (Example format 13.03M)'
         width: 50%
       simple_graphic:
         type: text
-        display: 'Simple number with no graphic. Text below reads: TOWNHOUSES SOLD IN THE LAST YEAR'
+        display: 'Townhouses Sold In The last Year (Number only, no symbols or commas)'
 
   description:
     type: redactor
