--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -63,11 +63,11 @@ fields:
     display: Open House Details
     instructions: "Enter details only such as "Tuesday, 9/6 10:00am - 1:00PM""
   leased:
-    display: Leased?
+    display: Rented?
     type: checkbox
   lease_price:
     type: text
-    display: Lease Price
+    display: Rented Price
     instructions:
       above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   agents:
