--- a/statamic/_config/fieldsets/globals.yaml
+++ b/statamic/_config/fieldsets/globals.yaml
@@ -16,6 +16,9 @@ fields:
   phone:
     type: text
     display: Company Phone Number Formatted
+  email_support:
+    type: text
+    display: Company Support Email Address
   email:
     type: text
     display: Company Email Address
