--- a/statamic/_config/settings.yaml
+++ b/statamic/_config/settings.yaml
@@ -54,6 +54,7 @@ _taxonomy:
   - property_location
   - ownership_type
   - services
+  - authors
 
 # Turns your slugs into pretty urls (spaces become "-" instead of %20)
 _taxonomy_slugify: false
