--- a/statamic/_config/fieldsets/blog.yaml
+++ b/statamic/_config/fieldsets/blog.yaml
@@ -1,6 +1,6 @@
 title: Blog
 fields:
-	preview_image:
+	main_image:
 		type: file
 		display: Preview Image
 		destination: assets/img/blog
@@ -15,3 +15,6 @@ fields:
 		taxonomy:
 			type: authors
 			folder: blog
+	content:
+		type: redactor
+		display: Blog Content
