--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -158,6 +158,14 @@ fields:
     instructions: Click Upload a File or Drag and Drop on the Upload box. You can upload multiple files at once.
     allowed: [png, gif, jpg, jpeg]
     destination: assets/img/properties/sale
+  brochure:
+    type: file
+    display: Property Brochure
+    destination: assets/downloads
+  floor_plans:
+    type: file
+    display: Property Floorplans
+    destination: assets/downloads
   content:
     type: redactor
     hide: true
