--- a/statamic/_config/fieldsets/blog.yaml
+++ b/statamic/_config/fieldsets/blog.yaml
@@ -1,16 +1,12 @@
 title: Blog
 fields:
+	author:
+		display: author
+		type: users
 	main_image:
 		type: file
 		display: Preview Image
 		destination: assets/img/blog
-	authors:
-		type: suggest 
-		display: Author
-		create: true
-		taxonomy:
-			type: authors
-			folder: blog
 	content:
 		type: redactor
 		display: Blog Content
