--- a/statamic/_config/settings.yaml
+++ b/statamic/_config/settings.yaml
@@ -55,6 +55,7 @@ _taxonomy:
   - ownership_type
   - services
   - authors
+  - agents
 
 # Turns your slugs into pretty urls (spaces become "-" instead of %20)
 _taxonomy_slugify: false
