--- a/statamic/_config/bundles/redactor/redactor.yaml
+++ b/statamic/_config/bundles/redactor/redactor.yaml
@@ -61,7 +61,7 @@ formatting:
 minHeight: 150
 
 # Turn on/off paragraph formatting
-paragraphize: false
+paragraphize: true
 
 # Turn on/off keypress shortcuts
 shortcuts: true
