--- a/statamic/_config/fieldsets/blog_entry.yaml
+++ b/statamic/_config/fieldsets/blog_entry.yaml
@@ -14,7 +14,7 @@ fields:
 			value: url
 	authors:
 		type: suggest
-		display: Author
+		display: Enter the author again (used for filtering by author)
 		create: true
 		content:
 			folder: agents
