--- a/statamic/_config/environments/dev.yaml
+++ b/statamic/_config/environments/dev.yaml
@@ -1,10 +1,2 @@
-###########################################################################################
-#
-#  DEV ENVIRONMENT VARIABLES
-#
-###########################################################################################
-
-# Just an example use case
-# enable_analytics: no
-_site_root: /~philippe/lesliegarfield/statamic/
-_site_url: /~philippe/lesliegarfield/statamic
+_site_root: /
+_site_url: http://lesliegarfield.com
