street easy styles

--- a/statamic/_config/fieldsets/agent.yaml
+++ b/statamic/_config/fieldsets/agent.yaml
@@ -3,6 +3,9 @@ fields:
 		hide: true
 	content:
 		hide: true
+ datestamp:
+    type: date
+    hide: true
 	image:
 		type: file
 		display: Agent Photo
