--- a/statamic/_config/environments/dev.yaml
+++ b/statamic/_config/environments/dev.yaml
@@ -1,2 +1,2 @@
-_site_root: /
-_site_url: http://lesliegarfield.com
+_site_root: /~philippe/lesliegarfield/statamic/
+_site_url: /~philippe/lesliegarfield/statamic
