twitter styles plus ids

--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -1,11 +1,8 @@
 
 
 fields:
-  site_root:
-    type: select
-    options:
-      - http://104.131.23.73/
-      - http://localhost/~philippe/lesliegarfield/statamic/
+  id:
+    type: uuid
   url:
     type: page_url
   title:
