--- a/statamic/_config/fieldsets/property_leased.yaml
+++ b/statamic/_config/fieldsets/property_leased.yaml
@@ -8,10 +8,13 @@ fields:
     max_items: 1
     taxonomy:
       type: property_location
-      folder: properties/*
-  leased:
-    display: Leased?
-    type: checkbox
+      folder: properties/garfield/*
+  streeteasy_status:
+    type: select
+    hide: true
+    display: Status
+    options:
+      - Leased
   price:
     type: text
     display: Lease Price
@@ -22,7 +25,7 @@ fields:
     type: suggest
     create: true
     content:
-      folder: agents
+      folder: agents/garfield
       label: title
       value: url
   property_type:
@@ -32,4 +35,6 @@ fields:
     max_items: 1
     taxonomy:
       type: property_type
-      folder: properties/*
+      folder: properties/garfield/*
+  content:
+    hide: true
